gradle-java - add testing support for gradle